<resources>
    <string name="app_name">CalculatorRPN</string>

    <string name="drop">DROP</string>
    <string name="swap">SWAP</string>
    <string name="all_clear">AC</string>
    <string name="undo">C</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="exponent">^</string>
    <string name="root">√</string>
    <string name="sign">±</string>
    <string name="decimal">.</string>
    <string name="enter">ENTER</string>
    <string name="settings">@null</string>

    <string name="color_white">White</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_grey">Grey</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_red">Red</string>

</resources>